WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59991
Plug-in not completely repainted after a crash
https://bugs.webkit.org/show_bug.cgi?id=59991
Summary
Plug-in not completely repainted after a crash
Anders Carlsson
Reported
2011-05-02 17:59:15 PDT
Plug-in not completely repainted after a crash
Attachments
Patch
(1.19 KB, patch)
2011-05-02 18:00 PDT
,
Anders Carlsson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-05-02 18:00:36 PDT
Created
attachment 92020
[details]
Patch
Anders Carlsson
Comment 2
2011-05-02 18:02:47 PDT
Committed
r85567
: <
http://trac.webkit.org/changeset/85567
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug