2011-05-02  Anders Carlsson  <andersca@apple.com>

Reviewed by Simon Fraser.

        Plug-in not completely repainted after a crash
        https://bugs.webkit.org/show_bug.cgi?id=59991

        Call Widget::invalidate().

        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::pluginProcessCrashed):


Canonical link: https://commits.webkit.org/75257@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85567 268f45cc-cd09-0410-ab3c-d52691b4dbfc